  EntityApplicationPanel.getSupportTableControlSet() and showEntityPanelDialog() now use the default entity caption if the panel provider does not provide one
  AbstractFunction now correctly implements DatabaseConnection.Function instead of DatabaseConnection.Procedure
  EntityTablePanel.layoutPanel() added, overrideable
  UiUtil.addAcceptSingleFileDragAndDrop() now requests focus for the text field after drop is accepted
  ColumnSearchPanel, no longer uses UiUtil.getPreferredTextFieldHeight() to determine it's own preferred size
  NavigableImagePanel, previousPanelSize initialized during construction, seemed to cause NullPointerException on Windows
  EntityUiUtil.createEntityLookupField() and EntityEditPanel.createEntityLookupField() overloaded with enabledState parameter
  EntityEditModel.add/removeEntityListener() added
  DefaultEntityEditModel implements the above by delegating to the underlying ValueChangeMapEditModel.add/RemoveValueMapSetListener()
  EntityConnectionImpl.setForeignKeyValues(), bug fixed, foreign key property values were not initialized if all selected entities had a null value for that property
  AbstractBeanValueLinkTest added
  EntitySelectCriteria.groupByClause() moved to EntityDefinition, since the group by clause is static for a given entity
  EntityConnectionImpl changed according to the above
  EntityConnectionImpl, query debug logging no longer depends on the method logger being enabled
  PropertySummaryPanel, no longer uses UiUtil.getPreferredTextFieldHeight() to set the field size
  DefaultEntityEditModel.createEntityLookupModel(), bug fixed, no search properties exception contained the wrong entityID
  EntityImpl.setAs(), bug fixed, referencedPrimaryKeysCache was not reset, test added
  EntityTableSearchMode.setSearchState() renamed to rememberCurrentSearchState()
  Some javadoc improvements
  JCalendar build dependency removed, UiUtil.getDateFromUser() now uses JCalendar if available on classpath